appId: com.zaimimran.almari
---
- runFlow: ../lib/sample-closet.yaml
- tapOn: "Closet"
- extendedWaitUntil:
    visible: "Closet"
    timeout: 60000
- tapOn: "Looks"
- extendedWaitUntil:
    visible: "Looks"
    timeout: 60000
- tapOn: "Today"
- extendedWaitUntil:
    visible:
      id: "home-create"
    timeout: 60000
